hphp/hack/test/typecheck/representable_as/representable_as_void.php.exp
ERROR: File "representable_as_void.php", line 11, characters 31-44:
You are using the return value of a `void` function (Typing[4119])
  File "representable_as_void.php", line 7, characters 26-29:
  A `void` function doesn't return a value.
ERROR: File "representable_as_void.php", line 16, characters 34-47:
Invalid argument (Typing[4110])
  File "representable_as_void.php", line 5, characters 69-75:
  Expected `nonnull`
  File "representable_as_void.php", line 7, characters 26-29:
  But got `null`
ERROR: File "representable_as_void.php", line 16, characters 34-47:
You are using the return value of a `void` function (Typing[4119])
  File "representable_as_void.php", line 7, characters 26-29:
  A `void` function doesn't return a value.
